--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,7 +299,7 @@ span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url('../imgs/satu.png') no-repeat center/cover;
+  background: url('../imgs/bc.jpg') no-repeat center/cover;
 }
 
 .card-back a {
@@ -413,7 +413,7 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgb(209, 78, 209));
   color: var(--white-color);
   display: flex;
   justify-content: center;
@@ -430,7 +430,7 @@ span {
 }
 
 .project-layer h4 {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .project-layer p {
